# lab7

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
dir1/: file8.txt
